# sudoku_solver

./: .gitattributes  .gitignore  nuget.config  readme.txt
blazor/: SudokuSolver.sln
blazor/SudokuSolver/: Program.cs  SudokuSolver.csproj  _ViewImports.cshtml
blazor/SudokuSolver.Core/: AssemblyInfo.fs  Batch.fs  Deduce.fs  Factory.fs  Grid.fs  ISudoku.fs  Print.fs  Refine.fs  Solve.fs  Split.fs  Square.fs  SudokuSolver.Core.fsproj
c/: README.md
c/include/: sudoku_grid.h  sudoku_printer.h  sudoku_solver.h
c/src/: sudoku_grid.c  sudoku_printer.c  sudoku_solver.c  sudoku_solver_console.c
clojure/sudoku-solver/: README.md  project.clj
cpp/: readme.txt
cpp/libraries/: project.lua
cpp/tools/: project.lua
cpp/workspace/: project.lua
csharp/: SudokuSolver.sln
csharp/SudokuSolver.Console/: Program.cs  SudokuSolver.Console.csproj
draco/: .gitignore  .info  Build Sudoku Solver  Build Sudoku Solver.info  README.md  Sudoku Solver.info  configure  disk.info  gui.d  make  makegui  sudoku_grid.d  sudoku_grid.g  sudoku_grid_by_bools.d  sudoku_printer.d  sudoku_printer.g  sudoku_solver.d  sudoku_solver.g  sudoku_solver.info  sudoku_solver_gui.d
fsharp/: SudokuSolver.Core.sln
lua/: sudoku.lua
mega_processor/: .gitignore  Entry.asm  Reference.sln  SudokuSolver.asm
node-red/: sudoku_solver_flow.json
rust/: Cargo.toml
rust-wasm/: .gitignore  Cargo.toml
rust-wasm/src/: grid.rs  lib.rs  solver.rs
typescript/: array.ts  debug.ts  double-linked-list.ts  double-linked-ring.ts  grid.ts  serialisation.ts  small-square.ts  square.ts  sudoku-grid.ts
(+260 files in other folders)
